2009-03-17  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/launcher/hd-launcher.h
	* src/launcher/hd-launcher.c
	* src/launcher/hd-app-mgr.c: Code to start an app launch transition
	whenever hildon-desktop is asked to launch an application
	* src/home/hd-render-manager.c: Switched to using object_get_data to
	find clients from actors as it is faster than a search
	* src/home/hd-switcher.c: Added extra checks for valid clients to
	help fix NB#105933 - although this stops the crash it doesn't fix the
	real issue yet
	* src/mb/hd-comp-mgr.c: Added a check for the client, removed some
	debug statements that were spamming the console

2009-03-17  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	Release 2.2.25

2009-03-16  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	Added X-Maemo-Switcher-Icon property to HdAppLauncher, read from the
	.desktop file.

	* src/launcher/hd-launcher-app.c:
	* src/launcher/hd-launcher-app.h:

2009-03-16  Jan Arne Petersen  <jpetersen@openismus.com>

	* src/mb/hd-status-menu.c (hd_status_menu_init): Move resize/center to
	hildon-status-menu.

2009-03-13  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unregister_client):
	  Regression fix: closing a window stack in tasw segfaulted
	  because unregister_client() forgot to remove the secondary's
	  actor from the switcher.

2009-03-13  Marc Ordinas i Llopis  <marc.ordinasillopis@collabora.co.uk>

	When not enough memory is available for launching an app, show a
	notification and allow the user to close other apps.

	* src/home/hd-switcher.c:
	* src/launcher/hd-app-mgr.c:
	* src/launcher/hd-launcher.c:

2009-03-13  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	* src/util/hd-transition.c (hd_transition_subview):
	  Regression workaround: after the transition to the subview
	  the main view wouldn't update anymore.

2009-03-13  Gordon Williams <gordon.williams@collabora.co.uk>

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unregister_client):